# eazy-controller

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey.rs  http_server.rs  lib.rs  message_handler.rs  models.rs  utils.rs
src-tauri/src/audio/: devices.rs  mod.rs  sessions.rs
src-tauri/src/media/: cache.rs  controls.rs  mod.rs  monitor.rs  thumbnail.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/_components/: device-selector.tsx  media-player.tsx  search-bar.tsx  session-list.tsx
src/components/: footer.tsx  theme-toggle.tsx
src/lib/: api.ts  websocket.ts
src/models/: home.ts  media.ts
