[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
winmix = "0.1"
cpal = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
base64 = "0.22"
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
mdns-sd = "0.11"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }
hostname = "0.4"
local-ip-address = "0.6"
lazy_static = "1.4"
tauri-plugin-prevent-default = "4.0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Media_Control",
    "Storage_Streams",
    "Foundation_Collections",
] }
tauri-plugin-updater = "2.9.0"
